# rsplot

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md
.config/: nextest.toml
.github/workflows/: ci.yml
adl2rsdm/: Cargo.toml  README.md
adl2rsdm/examples/: embed_child.adl  local_panel.adl  local_panel.rs  local_panel_screen.rs
adl2rsdm/src/: adl_parser.rs  cli.rs  codegen.rs  convert.rs  lib.rs  main.rs  symbols.rs
adl2rsdm/tests/: compiles.rs  opens.rs
adl2rsdm/tests/fixtures/: rd_screen.rs  rd_visuals_screen.rs  sample.adl  sample_screen.rs
adl2sidm/: Cargo.toml
adl2sidm/examples/: embed_child.adl  local_panel.adl  local_panel.rs  local_panel_screen.rs
adl2sidm/src/: adl_parser.rs  cli.rs  codegen.rs  convert.rs  lib.rs
adl2sidm/tests/: compiles.rs  opens.rs
doc/: adl2rsdm-parity-roadmap.md  adl2sidm-parity-roadmap.md  design.md  high-level-api.md  parity-review-2026-07-03.md  parity-roadmap.md  plot3d-parity-roadmap.md  pydm-parity-roadmap.md
examples/: aspect_ratio.rs  bootstrap.rs  colormap_norm.rs  complex_field3d.rs  decimation.rs  error_bars.rs  fill.rs  gallery.rs  high_level_active_curve_labels.rs  high_level_baseline.rs  high_level_clear_action.rs  high_level_colormap.rs  high_level_colormap_dialog.rs  high_level_compare_images.rs  high_level_context_menu.rs  high_level_curve_legend.rs  high_level_curves_roi.rs  high_level_error_bars.rs  high_level_fft_action.rs  high_level_fit_widget.rs  high_level_image_view.rs  high_level_items_selector.rs  high_level_legend.rs  high_level_limits_widget.rs  high_level_live_image.rs  high_level_live_profile.rs  high_level_live_update.rs  high_level_log_axis.rs  high_level_mask_tools.rs  high_level_plot1d.rs  high_level_plot2d.rs  high_level_plot2d_colorbar.rs  high_level_plot_limits.rs  high_level_plot_widget.rs  high_level_roi_manager.rs  high_level_roi_profile.rs  high_level_roi_stats.rs  high_level_scatter_mask.rs  high_level_scatter_view.rs  high_level_shift_action.rs  (+29 more)
rsdm/: Cargo.toml  README.md
rsdm/examples/: rsdm_ca_panel.rs  rsdm_local_panel.rs  rsdm_mini_beamline.rs
rsdm/src/: channel.rs  engine.rs  lib.rs
rsdm/tests/: ca_ioc.rs  calc_derived.rs  composite_z_order_render.rs  engine_fake.rs  engine_local.rs  pva_ioc.rs  widget_array_plots_render.rs  widget_base_render.rs  widget_byte_render.rs  widget_drawing_render.rs  widget_event_plot_render.rs  widget_image_view_render.rs  widget_justified_fill.rs  widget_middle_click_copy.rs  widget_multi_state_render.rs  widget_plot_menu.rs  widget_plot_style_render.rs  widget_plot_styling.rs  widget_scale_indicator_render.rs  widget_symbol_render.rs  widget_time_plot_render.rs  widget_waveform_table_render.rs
sidm/: Cargo.toml
sidm/examples/: sidm_mini_beamline.rs
sidm/src/: address.rs  channel.rs  engine.rs  lib.rs
sidm/src/data_plugins/: calc_plugin.rs  fake_plugin.rs  local_plugin.rs  mod.rs
sidm/src/data_plugins/epics_plugins/: ca_plugin.rs  mod.rs  pva_codec.rs  pva_plugin.rs
sidm/src/utilities/: macros.rs  mod.rs
sidm/src/widgets/: base.rs  byte.rs  checkbox.rs  datetime_edit.rs  datetime_label.rs  display_format.rs  drawing.rs  enum_button.rs  enum_combo_box.rs  event_plot.rs  frame.rs  image_view.rs  label.rs  line_edit.rs  mod.rs  plot_menu.rs  plot_style.rs  push_button.rs  ring_buffer.rs  scale_indicator.rs  scatter_plot.rs  slider.rs  spinbox.rs  time_plot.rs  waveform_plot.rs
sidm/tests/: ca_ioc.rs  calc_derived.rs  engine_local.rs  pva_ioc.rs  widget_array_plots_render.rs  widget_base_render.rs  widget_byte_render.rs  widget_event_plot_render.rs  widget_image_view_render.rs  widget_justified_fill.rs  widget_middle_click_copy.rs  widget_plot_style_render.rs  widget_plot_styling.rs  widget_scale_indicator_render.rs  widget_time_plot_render.rs
src/: lib.rs  print_cli.rs
src/core/: backend.rs  background.rs  calibration.rs  color.rs  colormap.rs  colormap_io.rs  decimate.rs  dtime_ticks.rs  fitting.rs  histogram.rs  items.rs  marker.rs  mod.rs  roi.rs  (+9 more)
tests/: alpha_slider_binding.rs  compare_auto.rs  compare_separator.rs  complex_amplitude_controls.rs  curve_caps_joins.rs  default_colormap_gray.rs  fit_action_flow.rs  image_alpha_map.rs  image_stack_lazy.rs  limits_history_lifecycle.rs  log_aspect_toggle.rs  marker_symbols_render.rs  mask_h5_picker.rs  mask_pointer_offset.rs  mask_transparency_slider.rs  median_filter_original.rs  multi_axis_render.rs  position_info_snap.rs  reset_zoom_defaults.rs  roi_band_unbounded_render.rs  roi_events.rs  roi_manager_render.rs  ruler.rs  scalar_field_pick.rs  scalar_field_properties_render.rs  scalar_field_view_render.rs  scatter_profile.rs  scene3d_blend_render.rs  scene3d_cutplane_render.rs  scene3d_fog_render.rs  scene3d_image_render.rs  scene3d_isosurface_render.rs  scene3d_mesh_render.rs  scene3d_overview_render.rs  scene3d_points_render.rs  scene3d_render.rs  scene3d_scatter2d_render.rs  scene3d_textured_mesh_render.rs  scene_pick.rs  scene_snapshot_render.rs  (+8 more)
(+114 files in other folders)
