[package]
name = "adl2rsdm"
version = "0.5.4"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Convert MEDM .adl screen files to RsDM (Rust) display modules"
repository = "https://github.com/physwkim/rsplot"
readme = "README.md"
# The `local_panel` example `include!`s its committed generated screen
# (`examples/local_panel_screen.rs`); that file is converter OUTPUT, not a target.
# Disable example autodiscovery so Cargo does not treat it as a second example
# (it has no `main`) and `cargo fmt` does not reflow it out of sync with the
# converter — only the explicitly declared example below is a target.
autoexamples = false

# `adl2rsdm` mirrors ~/codes/adl2pydm (which converts MEDM `.adl` screens to PyDM
# `.ui` files) but targets RsDM: it parses `.adl` into a widget tree and EMITS
# RUST SOURCE that builds the equivalent `rsdm` widgets. Because the output is
# Rust text, the converter itself needs no GUI/async/EPICS dependencies — only a
# CLI parser. The generated source is compile-checked against the real `rsdm`
# crate in `tests/compiles.rs` (a dev-dependency added with that test), which is
# the project's strongest fidelity signal.

[lib]
name = "adl2rsdm"
path = "src/lib.rs"

[[bin]]
name = "adl2rsdm"
path = "src/main.rs"

# The only example (autodiscovery is off above). It wires the committed,
# converter-generated `Screen` into a tiny eframe app — the runnable end-to-end
# demo. `examples/local_panel_screen.rs` next to it is its `include!`d generated
# output, deliberately NOT a target.
[[example]]
name = "local_panel"
path = "examples/local_panel.rs"

[dependencies]
# The CLI binary parses arguments with clap (a `mod cli` local to `main.rs`).
# The library — parser, symbol map, code emitter — stays pure and does not use
# it, so a consumer embedding the converter pulls no CLI machinery.
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
# The fidelity gate (tests/compiles.rs) and the runnable example compile a
# committed generated `Screen` against the REAL rsdm/rsplot/eframe APIs — the
# strongest correctness signal, and a check adl2pydm cannot do against Qt. rsdm
# is taken with default-features = false (the headless core: widgets + Engine +
# `loc://`); the generated code names `ca://` only as string literals, so no
# EPICS backend feature is needed. eframe's `wgpu` feature provides the
# `CreationContext::wgpu_render_state` the generated `new(cc)` reads.
rsplot = { path = ".." }
rsdm = { path = "../rsdm", default-features = false }
eframe = { version = "0.34", features = ["wgpu"] }
# The behaviour gate (tests/opens.rs) drives a generated screen headlessly:
# clicking a related-display button must OPEN the converted child screen (the
# egui embedded-viewport fallback renders it in the same pass, no GPU needed).
egui_kittest = "0.34.3"
